recursion.logo.koch.Koch.scala.error
Compilation error:
Koch:16: error: not found: value snowside
    snowside(levels-1,length/3);
    ^